# eager-embed

./: .gitignore  README.md  dataset_config.yaml  ds_zero0_config.json  evaluate_mteb.py  inference.py  inference_mteb.py  inference_transformers.py  merge_lora_and_push.py  mteb_wrapper.py  pyproject.toml  test_mteb_wrapper.py  train.sh
