[project]
name = "eager-embed-v1"
version = "0.1.0"
description = "Eagerworks embeddings model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.0+cu121",
    "torchvision==0.20.0+cu121",
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "deepspeed>=0.18.1",
    "faiss-cpu>=1.12.0",
    "ninja>=1.13.0",
    "peft>=0.17.1",
    "pillow>=12.0.0",
    "flash-attn==2.8.2",
    "qwen-vl-utils>=0.0.14",
    "qwen-omni-utils>=0.0.8",
    "tevatron",
    "mteb",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
tevatron = { git = "https://github.com/eagerworks/tevatron" }
mteb = { git = "https://github.com/eagerworks/mteb.git", branch = "feat/eagerembed" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
